--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-elementui-starter",
+  "name": "web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,32 +9,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
     "crypto-js": "^4.2.0",
-    "element-plus": "^2.9.0",
+    "element-plus": "^2.9.7",
     "file-saver": "^2.0.5",
     "moment": "^2.30.1",
-    "pinia": "^2.3.0",
-    "pinia-plugin-persistedstate": "^4.1.3",
+    "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "eslint": "^9.16.0",
     "@eslint/js": "^9.17.0",
     "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "eslint": "^9.16.0",
-    "eslint-plugin-vue": "^9.32.0",
-    "globals": "^15.13.0",
+    "@vue/tsconfig": "^0.7.0",
     "prettier": "^3.4.2",
     "sass": "^1.83.0",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.0",
-    "vite": "^6.0.1",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vue-tsc": "^2.1.10"
+    "typescript": "~5.7.2",
+    "vite": "^6.2.0",
+    "vue-tsc": "^2.2.4",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
