--- a/admin/app/src/main/resources/application-prod.yml
+++ b/admin/app/src/main/resources/application-prod.yml
@@ -1,17 +1,18 @@
 spring:
   datasource:
-    url: jdbc:mysql://10.0.1.8:3306/project?useUnicode=true&characterEncoding=utf8&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+#    url: jdbc:mysql://10.0.1.8:3306/project?useUnicode=true&characterEncoding=utf8&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.0.4:13306/local_project?useUnicode=true&characterEncoding=utf8&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
     username: root
-    password: ydjy@123456
+    password: 123456
     # see https://github.com/alibaba/druid/tree/master/druid-spring-boot-starter
   jackson:
     serialization:
       write-dates-as-timestamps: true
   data:
     redis:
-      host: 10.0.1.11
-      port: 6379
-      database: 2
+      host: 192.168.0.4
+      port: 16379
+      database: 1
 ktools:
   threads: 5
   open-urls:
