小程序页面之间的跳转逻辑

--- a/micapp/app.json
+++ b/micapp/app.json
@@ -4,7 +4,9 @@
     "pages/report/index",
     "pages/my/index",
     "pages/my/patient",
-    "pages/my/login"
+    "pages/my/login",
+    "pages/home/partners",
+    "pages/report/detail"
   ],
   "window": {
     "navigationBarTextStyle": "black",
