--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "es2022",
     // 编译后代码的目标版本（ECMAScript）。
-    "module": "ESNext",
+    "module": "es2022",
     // 使用的模块系统类型。ESNext 支持更多特性，比如动态导入等。
     "lib": [
-      "ESNext",
+      "es2022",
       "DOM",
       "DOM.Iterable"
     ],
@@ -41,15 +41,15 @@
     // 这使得导入和使用 CommonJS 模块的过程变得更加简洁方便。
     "esModuleInterop": true,
     /* Linting */
-    "strict": true,
+    "strict": false,
     // 启用所有严格类型检查选项
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     // 对空值进行严格检查
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     // 禁止隐式any类型
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     // 消除未使用变量产生的警告
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     // 消除未使用参数产生的警告
     "noFallthroughCasesInSwitch": true,
     // 避免 switch 语句掉入陷阱
