--- a/web/.env.production
+++ b/web/.env.production
@@ -1,3 +1,3 @@
-VITE_API_URL = 'https://api.yidingjiaoyu.net'
+VITE_API_URL = 'https://api.connectsir.com'
 VITE_WEB_URL = 'http://103.46.185.2:180'
 VITE_IMAGE_CDN_URL = 'http://cdn.yidingjiaoyu.net/images/'
