--- a/admin/app/Dockerfile
+++ b/admin/app/Dockerfile
@@ -1,10 +1,11 @@
+
 FROM openjdk:17
 
 COPY build/libs/app-1.0.0.jar /app.jar
 
 ENTRYPOINT ["java","-jar","/app.jar"]
 
-CMD ["--spring.profiles.active=prod"]
+CMD ["--spring.profiles.active=dev"]
 
 RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 
