--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ali-oss": "^6.22.0",
     "axios": "^1.8.4",
     "crypto-js": "^4.2.0",
     "element-plus": "^2.9.7",
@@ -21,17 +22,18 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "eslint": "^9.16.0",
     "@eslint/js": "^9.17.0",
+    "@types/ali-oss": "^6.16.11",
     "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.16.0",
     "prettier": "^3.4.2",
     "sass": "^1.83.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
-    "vue-tsc": "^2.2.4",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vue-tsc": "^2.2.4"
   }
 }
