--- a/admin/app/src/main/resources/application-dev.yml
+++ b/admin/app/src/main/resources/application-dev.yml
@@ -36,13 +36,13 @@ ktools:
 
 bam:
   tools:
-    wxMicAppId: wx2ecd3a0ec2002c20
-    wxMicSecret: 78fa51300dbc3a242df06a0a3f661865
+    wxMicAppId:
+    wxMicSecret:
     aliyunOssRegionId: cn-shenzhen
     aliyunOssEndpoint: oss-cn-shenzhen
     aliyunOssBucketName: kld-image
-    aliyunOssAccessKeyId: LTAI5tMTqcyToHDbwwam2xXZ
-    aliyunOssAccessKeySecret: omBtcOpxl4JXucnR3JNzmV3q1IYVyc
+    aliyunOssAccessKeyId:
+    aliyunOssAccessKeySecret:
     aliyunOssArn: acs:ram::1057999219938374:role/oss-manager
 
 
