--- a/web/package.json
+++ b/web/package.json
@@ -30,7 +30,8 @@
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.16.0",
     "prettier": "^3.4.2",
-    "sass": "^1.83.0",
+    "sass": "^1.87.0",
+    "sass-loader": "^16.0.5",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vite-tsconfig-paths": "^5.1.4",
