--- a/admin/app/src/main/resources/application-dev.yml
+++ b/admin/app/src/main/resources/application-dev.yml
@@ -36,13 +36,14 @@ ktools:
 
 bam:
   tools:
-    wxMicAppId:
-    wxMicSecret:
+    wxMicAppId: wx2ecd3a0ec2002c20
+    wxMicSecret: 78fa51300dbc3a242df06a0a3f661865
     aliyunOssRegionId: cn-shenzhen
-    aliyunOssEndpoint: oss-cn-shenzhen
-    aliyunOssBucketName: kld-image
-    aliyunOssAccessKeyId:
-    aliyunOssAccessKeySecret:
+    aliyunOssRegion: oss-cn-shenzhen
+    aliyunOssEndpoint: oss-cn-shenzhen.aliyuncs.com
+    aliyunOssBucketName: kld-data
+    aliyunOssAccessKeyId: LTAI5tMyS1Vcwr6EzivnDnqt
+    aliyunOssAccessKeySecret: WBa2tUPD7GgLzyF8X4mcAsX6ZblKp1
     aliyunOssArn: acs:ram::1057999219938374:role/oss-manager
 
 
