--- a/admin/app/src/main/resources/application-dev.yml
+++ b/admin/app/src/main/resources/application-dev.yml
@@ -42,8 +42,8 @@ bam:
     aliyunOssRegion: oss-cn-shenzhen
     aliyunOssEndpoint: oss-cn-shenzhen.aliyuncs.com
     aliyunOssBucketName: kld-data
-    aliyunOssAccessKeyId: LTAI5tMyS1Vcwr6EzivnDnqt
-    aliyunOssAccessKeySecret: WBa2tUPD7GgLzyF8X4mcAsX6ZblKp1
+    aliyunOssAccessKeyId:
+    aliyunOssAccessKeySecret:
     aliyunOssArn: acs:ram::1057999219938374:role/oss-manager
 
 
