--- a/admin/app/Dockerfile
+++ b/admin/app/Dockerfile
@@ -1,11 +1,11 @@
 
-FROM openjdk:25-jdk
+FROM openjdk:latest
 
 COPY build/libs/app-1.0.0.jar /app.jar
 
 ENTRYPOINT ["java","-jar","/app.jar"]
 
-CMD ["--spring.profiles.active=dev"]
+CMD ["--spring.profiles.active=prod"]
 
 RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 
