--- a/admin/app/src/main/resources/application-dev.yml
+++ b/admin/app/src/main/resources/application-dev.yml
@@ -36,8 +36,8 @@ ktools:
 
 bam:
   tools:
-    wxMicAppId: wx2ecd3a0ec2002c20
-    wxMicSecret: 78fa51300dbc3a242df06a0a3f661865
+    wxMicAppId: wx887bb611d3bbe4b9
+    wxMicSecret: 51e3c0fa64e668faa7f24e3abaa06e89
     aliyunOssRegionId: cn-shenzhen
     aliyunOssRegion: oss-cn-shenzhen
     aliyunOssEndpoint: oss-cn-shenzhen.aliyuncs.com
