--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,9 +28,9 @@ services:
         ipv4_address: 172.20.0.4
     volumes:
       - /opt/server/log:/var/log/server
-    depends_on:
-      - database
-      - cache
+#    depends_on:
+#      - database
+#      - cache
     ports:
       - "10000:10000"
   nginx:
